[tool.poetry]
name = "seclytics"
version = "1.0.0"
description = "Seclytics python client for access to our API."
authors = ["Jason Pope <jpope@seclytics.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
requests-mock = "^1.8.0"

[tool.poetry.extras]
bloom = ["pybloomfiltermmap3"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
